# xcpcio

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.js.back  .gitignore  .prettierignore  .prettierrc  .umirc.ts  CLAUDE.md  LICENSE  README.md  alias.ts  config.ts  contest_list.json  eslint.config.js  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  typings.d.ts  uno.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  deploy.yml  lint.yml  main.yml  release.yml  sync.yml  test.yml
config/: config.build.ts  config.ts  plugin.config.js
data/: contest_list.json
docker/: Dockerfile  Dockerfile.py  Dockerfile.python  Dockerfile.release  docker_entry.sh  docker_entry_py.sh
docs/: components.d.ts  config.ts  package.json  uno.config.ts  vite.config.ts
docs/.vitepress/: config.ts
docs/.vitepress/theme/: BasicLayout.vue  UnoCSSLayout.vue  index.ts  vars.css
docs/en/: index.md
docs/en/guide/: board.md  ccs-utility.md  clics-utility.md  data-format.md  index.md
docs/en/sponsor/: hznu-coder.md  index.md
docs/zh/: config.ts  index.md
docs/zh/guide/: board.md  ccs-utility.md  clics-utility.md  data-format.md  index.md
docs/zh/sponsor/: hznu-coder.md  index.md
origin-data/: get_contest_list.py
python/: .gitignore  README.md  pyproject.toml  task.md
python/app/: clics_archiver.py  clics_server.py  contest_api_server.py
python/cli/: ccs_archiver_cli.py
python/scripts/: generate_ccs_models.sh
python/tests/: test_contest.py  test_submission.py  test_team.py  test_types.py
python/xcpcio/: __init__.py  constants.py  types.py
python/xcpcio/api/: __init__.py  client.py  models.py
python/xcpcio/app/: board_server.py  clics_archiver.py  clics_uploader.py
python/xcpcio/board_server/: __init__.py  app.py  config.py  server.py
python/xcpcio/board_server/converters/: __init__.py  clics_to_board.py
python/xcpcio/board_server/routes/: __init__.py  board.py
python/xcpcio/board_server/services/: __init__.py  data_cache.py
python/xcpcio/ccs/: __init__.py  clics_api_client.py  contest_archiver.py
python/xcpcio/ccs/api_server/: app.py  dependencies.py  server.py
python/xcpcio/ccs/api_server/base/: __init__.py
python/xcpcio/ccs/api_server/routes/: __init__.py  access.py  accounts.py  awards.py  clarifications.py  contests.py  general.py  groups.py  judgement_types.py  judgements.py  languages.py  organizations.py  problems.py  runs.py  submissions.py  teams.py
python/xcpcio/ccs/api_server/services/: __init__.py  contest_service.py
python/xcpcio/ccs/model/: __init__.py
python/xcpcio/ccs/model/model_2023_06/: __init__.py  model.py
python/xcpcio/ccs/reader/: base_ccs_reader.py  contest_package_reader.py
python/xcpcio/clics/: clics_api_client.py  contest_archiver.py  contest_uploader.py
python/xcpcio/clics/api_server/: __init__.py  app.py  dependencies.py  server.py
python/xcpcio/clics/api_server/routes/: __init__.py  access.py  awards.py  clarifications.py  contests.py  general.py  judgement_types.py  judgements.py  languages.py  organizations.py  problems.py  runs.py  submissions.py
python/xcpcio/clics/api_server/services/: __init__.py  contest_service.py
python/xcpcio/clics/base/: types.py
python/xcpcio/clics/model/model_2023_06/: __init__.py  model.py
python/xcpcio/clics/reader/: __init__.py  contest_api_reader.py  contest_package_reader.py  interface.py
scripts/: get_contest_list.py  inject_vars.sh  sync-python-version.sh
src/: global.css  global.less  index.ts
src/components/: Loading.less  Loading.tsx
src/components/Balloon/: Balloon.core.ts  Balloon.less  Balloon.module.less  Balloon.module.less.d.ts  Balloon.tsx
src/components/Export/: Export.core.ts  Export.less  Export.module.less  Export.module.less.d.ts  Export.services.ts  Export.tsx  index.ts
src/components/Progress/: index.ts  (+12 more)
src/core/: constant.ts  contest.ts  image.ts  index.ts  submission.ts  team.ts
src/icons/: Girl.tsx  Github.tsx  Like.tsx  RightArrow.tsx  Star.tsx  index.ts
src/interface/: contest.ts  image.ts  index.ts  submission.ts  team.ts
src/pages/: board.css  board.tsx  document.ejs  index.css  index.tsx
src/types/: contest.ts  image.ts  submission.ts  team.ts
src/utils/: dayjs.ts  index.ts  request.ts  submission.ts  utils.ts
(+257 files in other folders)
