[project]
name = "xcpcio"
version = "0.63.3"
description = "xcpcio python lib"
readme = "README.md"
authors = [ { name = "Dup4", email = "hi@dup4.com" } ]
license = "MIT"
keywords = [ "xcpcio" ]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11.7",
  "aiohttp>=3.8.0",
  "aiofiles>=23.0.0",
  "click>=8.0.0",
  "pyyaml>=6.0.0",
  "semver>=3.0.0",
  "tenacity>=8.0.0",
]

[project.urls]
homepage = "https://github.com/xcpcio/xcpcio"
documentation = "https://github.com/xcpcio/xcpcio"
repository = "https://github.com/xcpcio/xcpcio"

[project.scripts]
ccs-archiver = "cli.ccs_archiver_cli:main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
 "datamodel-code-generator[http]>=0.33.0",
 "pytest>=8.4.2",
 "ruff>=0.4.0",
]
