[project]
name = "xcpcio"
description = "xcpcio python lib"
readme = "README.md"
authors = [ { name = "Dup4", email = "hi@dup4.com" } ]
maintainers = [
    { name = "Dup4", email = "hi@dup4.com" },
    { name = "cubercsl", email = "hi@cubercsl.site" },
]
license = "MIT"
keywords = [ "xcpcio" ]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11.7",
  "aiohttp>=3.8.0",
  "aiofiles>=23.0.0",
  "click>=8.0.0",
  "pyyaml>=6.0.0",
  "semver>=3.0.0",
  "tenacity>=8.0.0",
  "fastapi>=0.117.1",
  "uvicorn>=0.36.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/xcpcio/xcpcio"
documentation = "https://github.com/xcpcio/xcpcio"
repository = "https://github.com/xcpcio/xcpcio"

[project.scripts]
ccs-archiver = "cli.ccs_archiver_cli:main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "nodejs"
path = "../package.json"

[tool.hatch.build.hooks.version]
path = "xcpcio/__version__.py"

[dependency-groups]
dev = [
 "datamodel-code-generator[http]>=0.33.0",
 "hatch>=1.14.2",
 "pytest>=8.4.2",
 "ruff>=0.4.0",
]
